log
Thu 09 Mar 2023 03:41:07 PM UTC: 
 tests:  0|7
total_score: 0/70
3ef49b4
Thu 09 Mar 2023 04:18:04 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: ‘temp’ undeclared (first use in this function)
   18 |   temp = 0
      |   ^~~~
exercises.c:18:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:18:11: error: expected ‘;’ before ‘temp’
   18 |   temp = 0
      |           ^
      |           ;
   19 |   temp = a
      |   ~~~~     
Compilation failed
c400da4
Thu 09 Mar 2023 04:18:31 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:19:8: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   19 |   temp = a;
      |        ^
exercises.c:21:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   21 |   b = temp;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
3dff064
Thu 09 Mar 2023 04:21:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
9de37c2
Thu 16 Mar 2023 03:30:36 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
51f846d
